force-app/main/default/objects/PaymentRequest__c/PaymentRequest__c.object-meta.xml
<CustomObject>
    <label>Payment Request</label>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Payment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>