force-app/main/default/objects/PaymentRequest__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>