force-app/main/default/objects/PaymentRequest__c/fields/AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncJobId__c</fullName>
    <label>Async Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>