force-app/main/default/objects/PaymentRequest__c/fields/CartId__c.field-meta.xml
<CustomField>
    <fullName>CartId__c</fullName>
    <label>Cart</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>