force-app/main/default/objects/PaymentRequest__c/fields/CreditCardSurcharge__c.field-meta.xml
<CustomField>
    <fullName>CreditCardSurcharge__c</fullName>
    <label>Credit Card Surcharge</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>