force-app/main/default/objects/PaymentRequest__c/fields/CreditCardSurchargePct__c.field-meta.xml
<CustomField>
    <fullName>CreditCardSurchargePct__c</fullName>
    <label>%Credit Card Surcharge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>