force-app/main/default/objects/PaymentRequest__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>