force-app/main/default/objects/PaymentRequest__c/fields/GatewayResult__c.field-meta.xml
<CustomField>
    <fullName>GatewayResult__c</fullName>
    <label>Gateway Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>