force-app/main/default/objects/PaymentRequest__c/fields/GatewayTransactionId__c.field-meta.xml
<CustomField>
    <fullName>GatewayTransactionId__c</fullName>
    <label>Gateway Transaction Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>