force-app/main/default/objects/PaymentRequest__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>PaymentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>