force-app/main/default/objects/PaymentRequest__c/fields/PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidAmount__c</fullName>
    <label>Amount Paid</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>