force-app/main/default/objects/PaymentRequest__c/fields/PaidCurrency__c.field-meta.xml
<CustomField>
    <fullName>PaidCurrency__c</fullName>
    <label>Payment Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>