force-app/main/default/objects/PaymentRequest__c/fields/PaidMethod__c.field-meta.xml
<CustomField>
    <fullName>PaidMethod__c</fullName>
    <description>Payment method reported by the payment gateway</description>
    <label>Paid Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>