force-app/main/default/objects/PaymentRequest__c/fields/PaymentCardName__c.field-meta.xml
<CustomField>
    <fullName>PaymentCardName__c</fullName>
    <label>Payment Card Name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>