force-app/main/default/objects/PaymentRequest__c/fields/PaymentGateway__c.field-meta.xml
<CustomField>
    <fullName>PaymentGateway__c</fullName>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PORSA_GATEWAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>