force-app/main/default/objects/PaymentRequest__c/fields/PaymentLast4Digits__c.field-meta.xml
<CustomField>
    <fullName>PaymentLast4Digits__c</fullName>
    <label>Payment Card Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>