force-app/main/default/objects/PaymentRequest__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <label>Started At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>