force-app/main/default/objects/PaymentRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INITIATED</fullName>
                <default>true</default>
                <label>INITIATED</label>
            </value>
            <value>
                <fullName>WAITING_PAYMENT</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>EXCEPTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>