force-app/main/default/objects/PaymentRequest__c/fields/WebhookReceived__c.field-meta.xml
<CustomField>
    <fullName>WebhookReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webhook Received</label>
    <type>Checkbox</type>
</CustomField>